# brainnn

./: .gitignore  DECISIONS.md  HANDOFF.md  README.md  app.py  bci_dashboard.py  neurodivergent_app.py  neuromod_bci_synthesis.md  pyproject.toml  requirements.txt
.claude/: launch.json
.streamlit/: config.toml
checkpoints/: loso_results.json
configs/: config_manager.json
dashboard/: app.py  requirements.txt  translations.py
dashboard/.streamlit/: config.toml
docs/: grant_brief.md
drawings/: bci_engineering_drawings.py
examples/: adhd_simulation.py  benchmark_decoders.py  full_brain_demo.py  synesthesia_demo.py  train_motor_imagery.py
loop/: .gitignore  EXTRACTION.md  LICENSE  state.py
loop/loop/: copy.py  presets.py
loop/tests/: test_copy_tone.py
scripts/: capture_dashboard_screenshots.py  run_full_loso.py
simulation/: app.py  sandbox.py  sandbox_viz.py
src/brainnn/: __init__.py
src/brainnn/api/: __init__.py  tuning_api.py
src/brainnn/attention/: adhd.py  modulation.py  noise.py
src/brainnn/bci/: __init__.py  datasets.py  models.py  neuromod_decoder.py  training.py
src/brainnn/calibration/: __init__.py  calibration_logic.py  neuroplasticity.py
src/brainnn/cli/: main.py
src/brainnn/core/: __init__.py  brain.py  config.py  state.py
src/brainnn/datasets/: __init__.py  synthetic.py
src/brainnn/decoder/: __init__.py  base.py  csp_lda.py  (+4 more)
tests/test_attention/: test_adhd.py
tests/test_core/: test_brain.py  test_config.py  test_state.py
tests/test_modalities/: test_encoders.py
tests/test_synesthesia/: test_synesthetic_net.py
(+26 files in other folders)
